fixed button visibility appearing when it wasn't supposed to

--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -68,8 +68,7 @@
 }
 
 .portfolio__item-cta {
-    margin-top:auto;
-    display: flex;
+    margin-top: auto;
     gap: 1rem;
     margin-bottom: 1rem;
 }
